// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-moloco-rmp destination: addToWishlist action - all fields 1`] = `
Object {
  "channel_type": "SITE",
  "decision_track_id": "FGR%xELDK6awh3Tp*s",
  "device": Object {
    "advertising_id": "FGR%xELDK6awh3Tp*s",
    "ip": "FGR%xELDK6awh3Tp*s",
    "language": "FGR%xELDK6awh3Tp*s",
    "model": "FGR%xELDK6awh3Tp*s",
    "os": "FGR%XELDK6AWH3TP*S",
    "os_version": "FGR%xELDK6awh3Tp*s",
    "ua": "FGR%xELDK6awh3Tp*s",
    "unique_device_id": "FGR%xELDK6awh3Tp*s",
  },
  "event_id": "FGR%xELDK6awh3Tp*s",
  "event_type": "ADD_TO_WISHLIST",
  "items": Array [
    Object {
      "id": "FGR%xELDK6awh3Tp*s",
      "item_group_id": "FGR%xELDK6awh3Tp*s",
      "price": Object {
        "amount": 57250726019072,
        "currency": "PLN",
      },
      "quantity": 57250726019072,
      "seller_id": "FGR%xELDK6awh3Tp*s",
    },
  ],
  "page_id": "FGR%xELDK6awh3Tp*s",
  "session_id": "FGR%xELDK6awh3Tp*s",
  "shipping_charge": Object {
    "amount": 57250726019072,
    "currency": "PLN",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "FGR%xELDK6awh3Tp*s",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: addToWishlist action - required fields 1`] = `
Object {
  "channel_type": "SITE",
  "event_type": "ADD_TO_WISHLIST",
  "items": Array [
    Object {
      "id": "FGR%xELDK6awh3Tp*s",
    },
  ],
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: home action - all fields 1`] = `
Object {
  "channel_type": "APP",
  "decision_track_id": "EJ(KD9p9^^%i",
  "device": Object {
    "advertising_id": "EJ(KD9p9^^%i",
    "ip": "EJ(KD9p9^^%i",
    "language": "EJ(KD9p9^^%i",
    "model": "EJ(KD9p9^^%i",
    "os": "EJ(KD9P9^^%I",
    "os_version": "EJ(KD9p9^^%i",
    "ua": "EJ(KD9p9^^%i",
    "unique_device_id": "EJ(KD9p9^^%i",
  },
  "event_id": "EJ(KD9p9^^%i",
  "event_type": "HOME",
  "items": Array [
    Object {
      "id": "EJ(KD9p9^^%i",
      "item_group_id": "EJ(KD9p9^^%i",
      "price": Object {
        "amount": -5160557346816,
        "currency": "LKR",
      },
      "quantity": -5160557346816,
      "seller_id": "EJ(KD9p9^^%i",
    },
  ],
  "page_id": "EJ(KD9p9^^%i",
  "referrer_page_id": "EJ(KD9p9^^%i",
  "revenue": Object {
    "amount": -5160557346816,
    "currency": "LKR",
  },
  "session_id": "EJ(KD9p9^^%i",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "EJ(KD9p9^^%i",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: home action - required fields 1`] = `
Object {
  "channel_type": "APP",
  "event_type": "HOME",
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: itemPageView action - all fields 1`] = `
Object {
  "channel_type": "APP",
  "decision_track_id": "ulD!k3rFUf8H",
  "device": Object {
    "advertising_id": "ulD!k3rFUf8H",
    "ip": "ulD!k3rFUf8H",
    "language": "ulD!k3rFUf8H",
    "model": "ulD!k3rFUf8H",
    "os": "ULD!K3RFUF8H",
    "os_version": "ulD!k3rFUf8H",
    "ua": "ulD!k3rFUf8H",
    "unique_device_id": "ulD!k3rFUf8H",
  },
  "event_id": "ulD!k3rFUf8H",
  "event_type": "ITEM_PAGE_VIEW",
  "items": Array [
    Object {
      "id": "ulD!k3rFUf8H",
      "item_group_id": "ulD!k3rFUf8H",
      "price": Object {
        "amount": -3847229789962.24,
        "currency": "USD",
      },
      "quantity": -3847229789962.24,
      "seller_id": "ulD!k3rFUf8H",
    },
  ],
  "page_id": "ulD!k3rFUf8H",
  "referrer_page_id": "ulD!k3rFUf8H",
  "session_id": "ulD!k3rFUf8H",
  "shipping_charge": Object {
    "amount": -3847229789962.24,
    "currency": "USD",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "ulD!k3rFUf8H",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: itemPageView action - required fields 1`] = `
Object {
  "channel_type": "APP",
  "event_type": "ITEM_PAGE_VIEW",
  "items": Array [
    Object {
      "id": "ulD!k3rFUf8H",
    },
  ],
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: land action - all fields 1`] = `
Object {
  "channel_type": "SITE",
  "decision_track_id": "LII!0LBdUlNj]8JR%M",
  "device": Object {
    "advertising_id": "LII!0LBdUlNj]8JR%M",
    "ip": "LII!0LBdUlNj]8JR%M",
    "language": "LII!0LBdUlNj]8JR%M",
    "model": "LII!0LBdUlNj]8JR%M",
    "os": "LII!0LBDULNJ]8JR%M",
    "os_version": "LII!0LBdUlNj]8JR%M",
    "ua": "LII!0LBdUlNj]8JR%M",
    "unique_device_id": "LII!0LBdUlNj]8JR%M",
  },
  "event_id": "LII!0LBdUlNj]8JR%M",
  "event_type": "LAND",
  "items": Array [
    Object {
      "id": "LII!0LBdUlNj]8JR%M",
      "item_group_id": "LII!0LBdUlNj]8JR%M",
      "price": Object {
        "amount": 61196309008220.16,
        "currency": "PYG",
      },
      "quantity": 61196309008220.16,
      "seller_id": "LII!0LBdUlNj]8JR%M",
    },
  ],
  "page_id": "LII!0LBdUlNj]8JR%M",
  "referrer_page_id": "LII!0LBdUlNj]8JR%M",
  "search_query": "LII!0LBdUlNj]8JR%M",
  "session_id": "LII!0LBdUlNj]8JR%M",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "LII!0LBdUlNj]8JR%M",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: land action - required fields 1`] = `
Object {
  "channel_type": "SITE",
  "event_type": "LAND",
  "referrer_page_id": "LII!0LBdUlNj]8JR%M",
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: pageView action - all fields 1`] = `
Object {
  "channel_type": "APP",
  "decision_track_id": "sFKH^2",
  "device": Object {
    "advertising_id": "sFKH^2",
    "ip": "sFKH^2",
    "language": "sFKH^2",
    "model": "sFKH^2",
    "os": "SFKH^2",
    "os_version": "sFKH^2",
    "ua": "sFKH^2",
    "unique_device_id": "sFKH^2",
  },
  "event_id": "sFKH^2",
  "event_type": "PAGE_VIEW",
  "items": Array [
    Object {
      "id": "sFKH^2",
      "item_group_id": "sFKH^2",
      "price": Object {
        "amount": -74065445933547.52,
        "currency": "ETB",
      },
      "quantity": -74065445933547.52,
      "seller_id": "sFKH^2",
    },
  ],
  "page_id": "sFKH^2",
  "referrer_page_id": "sFKH^2",
  "session_id": "sFKH^2",
  "shipping_charge": Object {
    "amount": -74065445933547.52,
    "currency": "ETB",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "sFKH^2",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: pageView action - required fields 1`] = `
Object {
  "channel_type": "APP",
  "event_type": "PAGE_VIEW",
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: purchase action - all fields 1`] = `
Object {
  "channel_type": "SITE",
  "decision_track_id": "z*PO@ClIfz41i$",
  "device": Object {
    "advertising_id": "z*PO@ClIfz41i$",
    "ip": "z*PO@ClIfz41i$",
    "language": "z*PO@ClIfz41i$",
    "model": "z*PO@ClIfz41i$",
    "os": "Z*PO@CLIFZ41I$",
    "os_version": "z*PO@ClIfz41i$",
    "ua": "z*PO@ClIfz41i$",
    "unique_device_id": "z*PO@ClIfz41i$",
  },
  "event_id": "z*PO@ClIfz41i$",
  "event_type": "PURCHASE",
  "items": Array [
    Object {
      "id": "z*PO@ClIfz41i$",
      "item_group_id": "z*PO@ClIfz41i$",
      "price": Object {
        "amount": 15155152394649.6,
        "currency": "HUF",
      },
      "quantity": 15155152394649.6,
      "seller_id": "z*PO@ClIfz41i$",
    },
  ],
  "page_id": "z*PO@ClIfz41i$",
  "revenue": Object {
    "amount": 15155152394649.6,
    "currency": "HUF",
  },
  "session_id": "z*PO@ClIfz41i$",
  "shipping_charge": Object {
    "amount": 15155152394649.6,
    "currency": "HUF",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "z*PO@ClIfz41i$",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: purchase action - required fields 1`] = `
Object {
  "channel_type": "SITE",
  "event_type": "PURCHASE",
  "items": Array [
    Object {
      "id": "z*PO@ClIfz41i$",
    },
  ],
  "revenue": Object {
    "amount": 15155152394649.6,
    "currency": "HUF",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: search action - all fields 1`] = `
Object {
  "channel_type": "SITE",
  "decision_track_id": "A6r#IT*)oBgN#NJ98*^",
  "device": Object {
    "advertising_id": "A6r#IT*)oBgN#NJ98*^",
    "ip": "A6r#IT*)oBgN#NJ98*^",
    "language": "A6r#IT*)oBgN#NJ98*^",
    "model": "A6r#IT*)oBgN#NJ98*^",
    "os": "A6R#IT*)OBGN#NJ98*^",
    "os_version": "A6r#IT*)oBgN#NJ98*^",
    "ua": "A6r#IT*)oBgN#NJ98*^",
    "unique_device_id": "A6r#IT*)oBgN#NJ98*^",
  },
  "event_id": "A6r#IT*)oBgN#NJ98*^",
  "event_type": "SEARCH",
  "items": Array [
    Object {
      "id": "A6r#IT*)oBgN#NJ98*^",
      "item_group_id": "A6r#IT*)oBgN#NJ98*^",
      "price": Object {
        "amount": 73826803122176,
        "currency": "MXN",
      },
      "quantity": 73826803122176,
      "seller_id": "A6r#IT*)oBgN#NJ98*^",
    },
  ],
  "page_id": "A6r#IT*)oBgN#NJ98*^",
  "referrer_page_id": "A6r#IT*)oBgN#NJ98*^",
  "search_query": "A6r#IT*)oBgN#NJ98*^",
  "session_id": "A6r#IT*)oBgN#NJ98*^",
  "shipping_charge": Object {
    "amount": 73826803122176,
    "currency": "MXN",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "A6r#IT*)oBgN#NJ98*^",
}
`;

exports[`Testing snapshot for actions-moloco-rmp destination: search action - required fields 1`] = `
Object {
  "channel_type": "SITE",
  "event_type": "SEARCH",
  "search_query": "A6r#IT*)oBgN#NJ98*^",
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;
